components/app-configs/notebook-standalone/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notebook
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    # image.openshift.io/triggers: >-
    #   [{"from":{"kind":"ImageStreamTag","name":"nemo:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"nemo\")].image","paused":"false"}]
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: notebook
        # image: quay.io/opendatahub-contrib/workbench-images:rstudio-c9s-py39_2023b_latest
        image: docker.io/kubeflownotebookswg/jupyter:latest
        ports:
        - containerPort: 8888
          protocol: TCP
          name: notebook
        - containerPort: 8000
          protocol: TCP
          name: demo
        resources:
          limits:
            cpu: '2'
            memory: 8Gi
          requests:
            cpu: 500m
            memory: 8Gi
          # startupProbe:
          #   httpGet:
          #     path: /health
          #     port: http
          #     scheme: HTTP
          #   timeoutSeconds: 1
          #   periodSeconds: 30
          #   successThreshold: 1
          #   failureThreshold: 10
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: http
          #     scheme: HTTP
          #   timeoutSeconds: 5
          #   periodSeconds: 30
          #   successThreshold: 1
          #   failureThreshold: 3
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: http
          #     scheme: HTTP
          #   timeoutSeconds: 8
          #   periodSeconds: 100
          #   successThreshold: 1
          #   failureThreshold: 3
        volumeMounts:
          - name: shm
            mountPath: /dev/shm
          - name: home
            mountPath: /workspace
            subPath: data
      volumes:
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 512Mi
        - name: home
          persistentVolumeClaim:
            claimName: notebook
