components/app-configs/notebook-standalone/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    service.alpha.openshift.io/serving-cert-secret-name: notebook
  name: notebook
spec:
  ports:
  - name: demo
    port: 8000
    targetPort: 8000
  - name: notebook
    port: 8888
    targetPort: 8888
  - name: oauth-proxy
    port: 8080
    targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
