components/app-configs/notebook-standalone/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: notebook
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  port:
    targetPort: 8787
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: notebook
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: notebook-demo
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  port:
    targetPort: 8000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: notebook
    weight: 100
  wildcardPolicy: None
